--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ h1 {
     opacity: 80%;
     padding-top: 50px;
     text-align: center;
-    height: 300px;
+    min-height: 300px;
     width: 500px;
     background: #fff;
     border-radius: 20px;
