--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,9 @@ h1 {
     text-align: center;
     font-family: Rogers;
     font-size: 60px;
-    color: rgb(166, 11, 11)
+    color: rgb(166, 11, 11);
+    text-shadow: 2px 2px rgba(44, 39, 39, 0.608);
+    ;
 }
 
 .robogersFormStyle {
@@ -28,6 +30,9 @@ h1 {
 .box {
     opacity: 80%;
     padding-top: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
     text-align: center;
     min-height: 300px;
     width: 500px;
@@ -37,7 +42,7 @@ h1 {
 }
 
 .boxAlign {
-    padding-left: 400px;
-    padding-right: 250px;
+    padding-left: 350px;
+    padding-right: 350px;
     padding-top: 50px;
 }
