--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ h1 {
 }
 
 .robogersFormStyle {
-    text-align: center;
+    text-align: left;
 }
 
 .robogersOutputStyle {
@@ -30,8 +30,8 @@ h1 {
 .box {
     opacity: 80%;
     padding-top: 50px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
     padding-bottom: 50px;
     text-align: center;
     min-height: 300px;
@@ -42,7 +42,7 @@ h1 {
 }
 
 .boxAlign {
-    padding-left: 350px;
-    padding-right: 350px;
+    padding-left: 400px;
+    padding-right: 400px;
     padding-top: 50px;
 }
