--- a/css/styles.css
+++ b/css/styles.css
@@ -20,18 +20,20 @@ h1 {
 
 .robogersFormStyle {
     text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .robogersOutputStyle {
     text-align: center;
     padding-top: 30px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .box {
     opacity: 80%;
     padding-top: 50px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 35px;
+    padding-right: 35px;
     padding-bottom: 50px;
     text-align: center;
     min-height: 300px;
